Quartz ile zamanlayıcı kurdum. Rabbitmq projeye dahil ettim. Şu an her şey karışık vaziyette fakat hepsini toparlayacağım. Bugün sadece akşam biraz bakabildim. İsteyen gün ve saat belirleyecek. belirlediği tarihte rabbitmq ile excel formatında mail olarak veriler gönderilecek.

--- a/miniOdev/appsettings.json
+++ b/miniOdev/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMQConfiguration": {
+    "HostName": "rat.rmq2.cloudamqp.com",
+    "Password": "OBlmdA0t35ytzCwkH3GsTPqKhwm-luar",
+    "UserName": "tgdxkgbs:tgdxkgbs"
+  },
+  "SmtpConfig": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "User": "bticaret01@gmail.com",
+    "Password": "knkxxoqdmkdiliaz",
+    "EnableSsl": "true",
+    "UseDefaultCredentials": "false"
+  }
 }
