Bugünde çok az bakabildim. Quartz ve rabbit tam olarak uygulandı. zaten şu an aktif olarak mail gidiyor. excel formatı zaten hazırlandı. sadece excel ve diğer bilgileri maile ekleyeceğim . ve ui kısmı yapılacak.

--- a/miniOdev/miniOdev.csproj
+++ b/miniOdev/miniOdev.csproj
@@ -21,10 +21,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
     <PackageReference Include="Quartz" Version="3.5.0" />
     <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.5.0" />
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.5.0" />
+    <PackageReference Include="Quartz.Plugins" Version="3.5.0" />
   </ItemGroup>
 
   <ItemGroup>
